picture descriptions and CSS cleaning

--- a/portrait.html
+++ b/portrait.html
@@ -61,9 +61,9 @@
                   <ul class="dropdown">
                     <li><a href="#">Nature</a></li>
                     <li><a href="portrait.html">Portrait</a></li>
-                    <li><a href="#">People</a></li>
+                    <li><a href="people.html">People</a></li>
                     <li><a href="realestate.html">Real Estate</a></li>
-                    <li><a href="#">Travel</a></li>
+                    <li><a href="travel.html">Travel</a></li>
                   </ul>
                 </li>
                 <li><a href="services.html">Services</a></li>
