--- a/about.html
+++ b/about.html
@@ -63,7 +63,7 @@
                     <li><a href="portrait.html">Portrait</a></li>
                     <li><a href="people.html">People</a></li>
                     <li><a href="realestate.html">Real Estate</a></li>
-                    <li><a href="#">Travel</a></li>
+                    <li><a href="travel.html">Travel</a></li>
                   </ul>
                 </li>
                 <li><a href="services.html">Services</a></li>
@@ -112,8 +112,8 @@
               <img src="images/img_2.jpg" alt="Images" class="img-fluid">
             </div>
             <div class="col-md-4 ml-auto">
-              <h3>My Mission</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus vel tenetur explicabo necessitatibus, ad soluta consectetur illo qui voluptatem. Quis soluta maiores eum. Iste modi voluptatum in repudiandae fugiat suscipit dolorum harum, porro voluptate quis? Alias repudiandae dicta doloremque voluptates soluta repellendus, unde laborum quo nam, ullam facere voluptatem similique.</p>
+              <!-- <h3>My Mission</h3> -->
+              <p>Born in San Antonio, raised in Round Rock Texas, I am an avid photographer who loves to capture those</p>
             </div>
           </div>
 
