--- a/services.html
+++ b/services.html
@@ -63,7 +63,7 @@
                     <li><a href="portrait.html">Portrait</a></li>
                     <li><a href="people.html">People</a></li>
                     <li><a href="realestate.html">Real Estate</a></li>
-                    <li><a href="#">Travel</a></li>
+                    <li><a href="travel.html">Travel</a></li>
                   </ul>
                 </li>
                 <li class="active"><a href="services.html">Services</a></li>
