updated some language and picture additions

--- a/about.html
+++ b/about.html
@@ -109,11 +109,11 @@
 
           <div class="row mb-5">
             <div class="col-md-7">
-              <img src="images/img_2.jpg" alt="Images" class="img-fluid">
+              <img src="images/img_4675.jpg" alt="Images" class="img-fluid">
             </div>
             <div class="col-md-4 ml-auto">
               <!-- <h3>My Mission</h3> -->
-              <p>Born in San Antonio, raised in Round Rock Texas, I am an avid photographer who loves to capture those</p>
+              <p>Born in San Antonio, raised in Round Rock Texas, I am an avid photographer who loves to capture those moments in life, with family, friends, and special moments.</p>
             </div>
           </div>
 
