--- a/services.html
+++ b/services.html
@@ -159,7 +159,7 @@
                   <span class="icon flaticon-frame display-3 text-primary mb-4 d-block"></span>
                   <h3 class="text-black h4">Images</h3>
                   <p>All images will be in standard resolution delivered by USB, or cloud drive. Images will be retained
-                    by FramedinAustin Photography for a period of 3 years from date of event. I do not offere full
+                    by FramedinAustin Photography for a period of 3 years from date of event. I do not offer full
                     resolution images. Please inquire for more information.</p>
                   <!-- <p><strong class="font-weight-bold text-primary">$40</strong></p> -->
                 </div>
