--- a/events.html
+++ b/events.html
@@ -59,7 +59,7 @@
                 <li class="has-children active">
                   <a href="#">Gallery</a>
                   <ul class="dropdown">
-                    <li><a href="nature.html">Nature</a></li>
+                    <li><a href="events.html">Events</a></li>
                     <li><a href="portrait.html">Portrait</a></li>
                     <li><a href="people.html">People</a></li>
                     <li><a href="realestate.html">Real Estate</a></li>
@@ -104,18 +104,18 @@
         <div class="col-md-7">
           <div class="row mb-5">
             <div class="col-12 ">
-              <h2 class="site-section-heading text-center">Nature</h2>
+              <h2 class="site-section-heading text-center">Events</h2>
             </div>
           </div>
         </div>
     
       </div>
       <div class="row" id="lightgallery">
-        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/Blue1.jpg" data-sub-html="<h4>Texas Bluebonnets</h4>">
-          <a href="#"><img src="images/Blue1.jpg" alt="IMage" class="img-fluid"></a>
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/_D5A0025.jpg">
+          <a href="#"><img src="images/_D5A0025.jpg" alt="IMage" class="img-fluid"></a>
         </div>
-        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/Blue2.jpg" data-sub-html="<h4>Bluebonnets</h4>">
-          <a href="#"><img src="images/Blue2.jpg" alt="IMage" class="img-fluid"></a>
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/_D5A0051.jpg">
+          <a href="#"><img src="images/_D5A0051.jpg" alt="IMage" class="img-fluid"></a>
         </div>
         <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/big-images/nature_big_3.jpg" data-sub-html="<h4>Fading Light</h4><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem reiciendis, dolorum illo temporibus culpa eaque dolore rerum quod voluptate doloribus.</p>">
           <a href="#"><img src="images/nature_small_3.jpg" alt="IMage" class="img-fluid"></a>
