--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <li class="has-children">
                   <a href="#">Gallery</a>
                   <ul class="dropdown">
-                    <li><a href="nature.html">Nature</a></li>
+                    <li><a href="events.html">Events</a></li>
                     <li><a href="portrait.html">Portrait</a></li>
                     <li><a href="people.html">People</a></li>
                     <li><a href="realestate.html">Real Estate</a></li>
@@ -102,10 +102,10 @@
             <div class="swiper-slide">
               <div class="image-wrap">
                 <div class="image-info">
-                  <h2 class="mb-3">Nature</h2>
-                  <a href="nature.html" class="btn btn-outline-white py-2 px-4">More Photos</a>
+                  <h2 class="mb-3">Events</h2>
+                  <a href="events.html" class="btn btn-outline-white py-2 px-4">More Photos</a>
                 </div>
-                <img src="images/Blue2.jpg" alt="Image">
+                <img src="images/_D5A0025.jpg" alt="Image">
               </div>
             </div>
             <div class="swiper-slide">
