--- a/contact.html
+++ b/contact.html
@@ -59,7 +59,7 @@
                 <li class="has-children">
                   <a href="#">Gallery</a>
                   <ul class="dropdown">
-                    <li><a href="nature.html">Nature</a></li>
+                    <li><a href="events.html">Events</a></li>
                     <li><a href="portrait.html">Portrait</a></li>
                     <li><a href="people.html">People</a></li>
                     <li><a href="realestate.html">Real Estate</a></li>
