updated people page

--- a/events.html
+++ b/events.html
@@ -141,13 +141,13 @@
         </div>
 
         <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/In full swing (Large).jpg">
-          <a href="#"><img src="images/In full swing (Large).jpg" alt="IMage" class="img-fluid"></a>
+          <a href="#"><img src="images/In full swing (Large).jpg" alt="image" class="img-fluid"></a>
         </div>
         <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/Lisa sings (Large).jpg">
-          <a href="#"><img src="images/Lisa sings (Large).jpg" alt="IMage" class="img-fluid"></a>
+          <a href="#"><img src="images/Lisa sings (Large).jpg" alt="image" class="img-fluid"></a>
         </div>
         <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/Lisa sings II (Large).jpg">
-          <a href="#"><img src="images/Lisa sings II (Large).jpg" alt="IMage" class="img-fluid"></a>
+          <a href="#"><img src="images/Lisa sings II (Large).jpg" alt="image" class="img-fluid"></a>
         </div>
       </div>
     </div>
