--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                   <h2 class="mb-3">Events</h2>
                   <a href="events.html" class="btn btn-outline-white py-2 px-4">More Photos</a>
                 </div>
-                <img src="images/_D5A0025.jpg" alt="Image">
+                <img src="images/_D5A0025.jpg" alt="image">
               </div>
             </div>
             <div class="swiper-slide">
@@ -114,7 +114,7 @@
                   <h2 class="mb-3">Portrait</h2>
                   <a href="portrait.html" class="btn btn-outline-white py-2 px-4">More Photos</a>
                 </div>
-                <img src="images/_D5A2140p.jpg" alt="Image">
+                <img src="images/_D5A2140p.jpg" alt="image">
               </div>
             </div>
             <div class="swiper-slide">
@@ -123,7 +123,7 @@
                   <h2 class="mb-3">People</h2>
                   <a href="people.html" class="btn btn-outline-white py-2 px-4">More Photos</a>
                 </div>
-                <img src="images/In Blue 3.jpg" alt="Image">
+                <img src="images/In Blue 3.jpg" alt="image">
               </div>
             </div>
             <div class="swiper-slide">
@@ -132,7 +132,7 @@
                   <h2 class="mb-3">Real Estate</h2>
                   <a href="realestate.html" class="btn btn-outline-white py-2 px-4">More Photos</a>
                 </div>
-                <img src="images/Driskill outside front.jpg" alt="Image">
+                <img src="images/Driskill outside front.jpg" alt="image">
               </div>
             </div>
             <div class="swiper-slide">
@@ -141,7 +141,7 @@
                   <h2 class="mb-3">Travel</h2>
                   <a href="travel.html" class="btn btn-outline-white py-2 px-4">More Photos</a>
                 </div>
-                <img src="images/Malta lighthouse.jpg" alt="Image">
+                <img src="images/Malta lighthouse.jpg" alt="image">
               </div>
             </div>
         </div>
