updated realestate page

--- a/realestate.html
+++ b/realestate.html
@@ -111,36 +111,42 @@
     
       </div>
       <div class="row" id="lightgallery">
-        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/_D5A2030.jpg" data-sub-html="<h4>Fading Light</h4><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor doloremque hic excepturi fugit, sunt impedit fuga tempora, ad amet aliquid?</p>">
-          <a href="#"><img src="images/_D5A2030.jpg" alt="image" class="img-fluid"></a>
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/Backyard.jpg">
+          <a href="#"><img src="images/Backyard.jpg" alt="image" class="img-fluid"></a>
         </div>
-        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/_D5A2140p.jpg" data-sub-html="<h4>Fading Light</h4><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam omnis quaerat molestiae, praesentium. Ipsam, reiciendis. Aut molestiae animi earum laudantium.</p>">
-          <a href="#"><img src="images/_D5A2140p.jpg" alt="image" class="img-fluid"></a>
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/Breakfast nook (1 of 1).jpg">
+          <a href="#"><img src="images/Breakfast nook (1 of 1).jpg" alt="image" class="img-fluid"></a>
         </div>
-        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/Boswell3hr (Large).jpg">
-          <a href="#"><img src="images/Boswell3hr (Large).jpg" alt="image" class="img-fluid"></a>
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/Car Port.jpg">
+          <a href="#"><img src="images/Car Port.jpg" alt="image" class="img-fluid"></a>
         </div>
-        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/Boswell2 (Large).jpg">
-          <a href="#"><img src="images/Boswell2 (Large).jpg" alt="image" class="img-fluid"></a>
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/First Bedroom (1 of 1).jpg">
+          <a href="#"><img src="images/First Bedroom (1 of 1).jpg" alt="image" class="img-fluid"></a>
         </div>
-        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/Boswell1 (Large).jpg">
-          <a href="#"><img src="images/Boswell1 (Large).jpg" alt="image" class="img-fluid"></a>
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/First bedroom (1 of 2).jpg">
+          <a href="#"><img src="images/First bedroom (1 of 2).jpg" alt="image" class="img-fluid"></a>
         </div>
-        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/Boswell5 (Large).jpg">
-          <a href="#"><img src="images/Boswell5 (Large).jpg" alt="image" class="img-fluid"></a>
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/First bedroom (2 of 2).jpg">
+          <a href="#"><img src="images/First bedroom (2 of 2).jpg" alt="image" class="img-fluid"></a>
         </div>
 
-        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/_D5A5014 (Large).jpg">
-          <a href="#"><img src="images/_D5A5014 (Large).jpg" alt="image" class="img-fluid"></a>
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/Formal Dining (1 of 4).jpg">
+          <a href="#"><img src="images/Formal Dining (1 of 4).jpg" alt="image" class="img-fluid"></a>
         </div>
-        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/_D5A2030.jpg" data-sub-html="<h4>Fading Light</h4><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor doloremque hic excepturi fugit, sunt impedit fuga tempora, ad amet aliquid?</p>">
-          <a href="#"><img src="images/_D5A2030.jpg" alt="image" class="img-fluid"></a>
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/Formal Dining (3 of 4).jpg">
+          <a href="#"><img src="images/Formal Dining (3 of 4).jpg" alt="image" class="img-fluid"></a>
         </div>
-        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/big-images/nature_big_8.jpg" data-sub-html="<h4>Fading Light</h4><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis consequatur quam et, delectus, cum iste ipsa animi eligendi obcaecati nemo.</p>">
-          <a href="#"><img src="images/nature_small_8.jpg" alt="image" class="img-fluid"></a>
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/Formal Dining (4 of 4).jpg">
+          <a href="#"><img src="images/Formal Dining (4 of 4).jpg" alt="image" class="img-fluid"></a>
         </div>
-        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/big-images/nature_big_7.jpg" data-sub-html="<h4>Fading Light</h4><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci quia illo voluptatibus numquam inventore, ab asperiores molestiae distinctio atque nihil.</p>">
-          <a href="#"><img src="images/nature_small_7.jpg" alt="image" class="img-fluid"></a>
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/Front (1 of 2).jpg">
+          <a href="#"><img src="images/Front (1 of 2).jpg" alt="image" class="img-fluid"></a>
+        </div>
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/Front (2 of 2).jpg">
+          <a href="#"><img src="images/Front (2 of 2).jpg" alt="image" class="img-fluid"></a>
+        </div>
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/Front (3 of 3).jpg">
+          <a href="#"><img src="images/Front (3 of 3).jpg" alt="image" class="img-fluid"></a>
         </div>
       </div>
     </div>
