--- a/realestate.html
+++ b/realestate.html
@@ -126,8 +126,8 @@
         <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/First bedroom (1 of 2).jpg">
           <a href="#"><img src="images/First bedroom (1 of 2).jpg" alt="image" class="img-fluid"></a>
         </div>
-        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/First bedroom (2 of 2).jpg">
-          <a href="#"><img src="images/First bedroom (2 of 2).jpg" alt="image" class="img-fluid"></a>
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/Game room (2 of 3).jpg">
+          <a href="#"><img src="images/Game room (2 of 3).jpg" alt="image" class="img-fluid"></a>
         </div>
 
         <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/Formal Dining (1 of 4).jpg">
