updates on services page

--- a/services.html
+++ b/services.html
@@ -134,7 +134,7 @@
               </div>
               <div class="col-md-6 col-lg-6 col-xl-4 text-center mb-5 mb-lg-5">
                 <div class="h-100 p-4 p-lg-5 bg-light site-block-feature-7">
-                  <span class="icon flaticon-sheep display-3 text-primary mb-4 d-block"></span>
+                  <span class="icon flaticon-video-play display-3 text-primary mb-4 d-block"></span>
                   <h3 class="text-black h4">Event</h3>
                   <p>For any business, religious, family reunion, or just a great big party, this service is for you.
                   </p>
@@ -145,7 +145,7 @@
 
               <div class="col-md-6 col-lg-6 col-xl-4 text-center mb-5 mb-lg-5">
                 <div class="h-100 p-4 p-lg-5 bg-light site-block-feature-7">
-                  <span class="icon flaticon-frame display-3 text-primary mb-4 d-block"></span>
+                  <span class="icon flaticon-camera display-3 text-primary mb-4 d-block"></span>
                   <h3 class="text-black h4">Sports</h3>
                   <p>For any sports events, including soccer, baseball, racing, or any sport you would love to have some
                     team and action pictures of.</p>
@@ -161,6 +161,15 @@
                   <p>All images will be in standard resolution delivered by USB, or cloud drive. Images will be retained
                     by FramedinAustin Photography for a period of 3 years from date of event. I do not offer full
                     resolution images. Please inquire for more information.</p>
+                  <!-- <p><strong class="font-weight-bold text-primary">$40</strong></p> -->
+                </div>
+              </div>
+
+              <div class="col-md-6 col-lg-6 col-xl-4 text-center mb-5 mb-lg-5">
+                <div class="h-100 p-4 p-lg-5 bg-light site-block-feature-7">
+                  <span class="icon flaticon-video-play display-3 text-primary mb-4 d-block"></span>
+                  <h3 class="text-black h4">Digital</h3>
+                  <p>Coming soon! I will be providing web development services for your needs. Need a website for fmaily or buisiness? Let me know!</p>
                   <!-- <p><strong class="font-weight-bold text-primary">$40</strong></p> -->
                 </div>
               </div>
