--- a/travel.html
+++ b/travel.html
@@ -126,7 +126,7 @@
         <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/St Peters (Medium).jpg" data-sub-html="<h4>St. Peters - Rome</h4>>
           <a href="#"><img src="images/St Peters (Medium).jpg" alt="image" class="img-fluid"></a>
         </div>
-        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/bSRV (Large).jpg" data-sub-html="<h4>Stevie Ray Vaughn - Austin</h4>
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/SRV (Large).jpg" data-sub-html="<h4>Stevie Ray Vaughn - Austin</h4>
           <a href="#"><img src="images/SRV (Large).jpg" alt="image" class="img-fluid"></a>
         </div>
 
