small update to html

--- a/travel.html
+++ b/travel.html
@@ -114,16 +114,16 @@
         <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/Fontana del Moro in Piazza Navona.jpg" data-sub-html="<h4>Piazza Navona</h4>
           <a href="#"><img src="images/Fontana del Moro in Piazza Navona.jpg" alt="image" class="img-fluid"></a>
         </div>
-        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/Santa Maria della Salute at night.jpg" data-sub-html="<h4>Santa Maria della Salute</h4>>
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/Santa Maria della Salute at night.jpg" data-sub-html="<h4>Santa Maria della Salute</h4>
           <a href="#"><img src="images/Santa Maria della Salute at night.jpg" alt="Iimage" class="img-fluid"></a>
         </div>
-        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/Slow traffic (Large).jpg" data-sub-html="<h4>Venice canal</h4>>
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/Slow traffic (Large).jpg" data-sub-html="<h4>Venice canal</h4>
           <a href="#"><img src="images/Slow traffic (Large).jpg" alt="image" class="img-fluid"></a>
         </div>
-        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/Spanish Steps (Medium).jpg" data-sub-html="<h4>Spanish Steps - Rome</h4>>
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/Spanish Steps (Medium).jpg" data-sub-html="<h4>Spanish Steps - Rome</h4>
           <a href="#"><img src="images/Spanish Steps (Medium).jpg" alt="image" class="img-fluid"></a>
         </div>
-        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/St Peters (Medium).jpg" data-sub-html="<h4>St. Peters - Rome</h4>>
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/St Peters (Medium).jpg" data-sub-html="<h4>St. Peters - Rome</h4>
           <a href="#"><img src="images/St Peters (Medium).jpg" alt="image" class="img-fluid"></a>
         </div>
         <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/SRV (Large).jpg" data-sub-html="<h4>Stevie Ray Vaughn - Austin</h4>
@@ -133,17 +133,17 @@
         <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/Venice canal early morning.jpg" data-sub-html="<h4>Venice</h4>
           <a href="#"><img src="images/Venice canal early morning.jpg" alt="image" class="img-fluid"></a>
         </div>
-        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/Valleta street corner (Large).jpg" data-sub-html="<h4>Valleta street - Malta</h4>>
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/Valleta street corner (Large).jpg" data-sub-html="<h4>Valleta street - Malta</h4>
           <a href="#"><img src="images/Valleta street corner (Large).jpg" alt="image" class="img-fluid"></a>
         </div>
         <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/Trevi Fountain (Medium).jpg" data-sub-html="<h4>Trevi Fountain - Rome</h4>
           <a href="#"><img src="images/Trevi Fountain (Medium).jpg" alt="image" class="img-fluid"></a>
         </div>
 
-        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/Stromboli Volcano II (Medium).jpg" data-sub-html="<h4>Stromboli Volcano - Mediterranean</h4>>
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/Stromboli Volcano II (Medium).jpg" data-sub-html="<h4>Stromboli Volcano - Mediterranean</h4>
           <a href="#"><img src="images/Stromboli Volcano II (Medium).jpg" alt="image" class="img-fluid"></a>
         </div>
-        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/Congress Bridge at dusk (Large).jpg" data-sub-html="<h4>Congress Bridge - Austin</h4>>
+        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/Congress Bridge at dusk (Large).jpg" data-sub-html="<h4>Congress Bridge - Austin</h4>
           <a href="#"><img src="images/Congress Bridge at dusk (Large).jpg" alt="image" class="img-fluid"></a>
         </div>
         <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/Croatian lake and boat.jpg" data-sub-html="<h4>Croatian lake</h4>
